#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([TM plugin instrumentation for profiling], [1.0], [ivan.i.kulagin@gmail.com])

# AM_INIT_AUTOMAKE
AM_INIT_AUTOMAKE([foreign])
AC_ENABLE_SHARED
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC
AC_CONFIG_FILES([Makefile])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT
