#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Runtime-library of profiling transactional memory], [1.0], [ivan.i.kulagin@gmail.com])

AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_ENABLE_SHARED
AC_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile])
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
